/*
Copyright 2018 The Nomos Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/


// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = 'proto2';

package github.com.google.nomos.pkg.api.policyhierarchy.v1alpha1;

import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/schema/generated.proto";
import "k8s.io/apimachinery/pkg/util/intstr/generated.proto";

// Package-wide variables from generator "generated".
option go_package = "v1alpha1";

// NamespaceSelector specifies a LabelSelector applied to namespaces that exist within a
// PolicyNode hierarchy.
// 
// +protobuf=true
message NamespaceSelector {
  // Standard object's metadata. The Name field of the policy node must match the namespace name.
  // +optional
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  // The actual object definition, per K8S object definition style.
  optional NamespaceSelectorSpec spec = 2;
}

// NamespaceSelectorList holds a list of NamespaceSelector resources.
// +protobuf=true
message NamespaceSelectorList {
  // Standard object's metadata.
  // +optional
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  // Items is a list of policy nodes that apply.
  repeated NamespaceSelector items = 2;
}

// NamespaceSelectorSpec contains spec fields for NamespaceSelector.
// +protobuf=true
message NamespaceSelectorSpec {
  // label selector semantics. An empty selector matches all namespaces.
  optional k8s.io.apimachinery.pkg.apis.meta.v1.LabelSelector selector = 1;
}

